syntax="proto3";

import "ECS/components/transform_component.proto";
import "ECS/components/visual_component.proto";
import "ECS/components/input_component.proto";
import "ECS/components/health_component.proto";
import "ECS/components/camera_component.proto";
import "ECS/components/terrain_component.proto";
import "ECS/components/light_component.proto";
import "ECS/components/script_component.proto";

package astre.proto.ecs;

message EntityDefinition
{
    uint64 id = 1;
    string name = 2;

    optional TransformComponent transform = 3;
    optional HealthComponent health = 4;
    optional VisualComponent visual = 5;
    optional InputComponent input = 6;
    optional CameraComponent camera = 7;
    optional TerrainComponent terrain = 8;
    optional LightComponent light = 9;
    optional ScriptComponent script = 10;
}